added changing themes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <span>2</span>
               <span>3</span>
             </div>
-            <div class="slider">
+            <div id="slider" class="slider">
               <div class="ball"></div>
             </div>
           </div>
