popravljene napomenjene stavke

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <span>THEME</span>
           <div class="picker">
             <div class="enum">
-              <span>1</span>
-              <span>2</span>
-              <span>3</span>
+              <span><div id="setDarkTheme">1</div></span>
+              <span><div id="setLightTheme">2</div></span>
+              <span><div id="setNegTheme">3</div></span>
             </div>
             <div id="slider" class="slider">
               <div class="ball"></div>
